--- a/notebooks/integrations/UnsecretAgent/CHP_UA_Integration.ipynb
+++ b/notebooks/integrations/UnsecretAgent/CHP_UA_Integration.ipynb
@@ -160,6 +160,8 @@
     "response = buildQuery(genes)\n",
     "payload = {'query': response, 'reasoner_id': 'unsecret'}\n",
     "r = requests.post('http://chp.thayer.dartmouth.edu/submitQuery/', json=payload)\n"
+    "# python object containing reponse"
+    "chp_resp = json.loads(r.content)
    ]
   },
   {
