Reorganization and integration with reorg of pybkb.

--- a/notebooks/integrations/UnsecretAgent/CHP_UA_Integration.ipynb
+++ b/notebooks/integrations/UnsecretAgent/CHP_UA_Integration.ipynb
@@ -17,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "import json"
    ]
   },
   {
@@ -159,7 +160,42 @@
     "\n",
     "response = buildQuery(genes)\n",
     "payload = {'query': response, 'reasoner_id': 'unsecret'}\n",
-    "r = requests.post('http://chp.thayer.dartmouth.edu/submitQuery/', json=payload)\n"
+    "r = requests.post('http://chp.thayer.dartmouth.edu/submitQuery/', json=payload)\n",
+    "\n",
+    "chp_res = json.loads(r.content)\n",
+    "\n",
+    "QG = chp_resp['query_graph']\n",
+    "KG = chp_resp['knowledge_graph']\n",
+    "res = chp_resp['results']\n",
+    "\n",
+    "#sensitive patients\n",
+    "KG_result_node = res['node_bindings'][0]['kg_id']\n",
+    "for node in KG['nodes']:\n",
+    "    if node['id'] == KG_result_node:\n",
+    "        sensitive_patients = node['Description']\n",
+    "        p_survival = node['has_confidence_level']\n",
+    "        \n",
+    "# probability of surival given QG specification\n",
+    "#print(p_survival)\n",
+    "\n",
+    "# Text dump of sensitive patients.\n",
+    "# Each patient contains patient data accessed through the following keys\n",
+    "# 'Patient_ID'\n",
+    "# 'Cancer_Type'\n",
+    "# 'Patient_Genes'\n",
+    "# 'Patient_Gene_Variants'\n",
+    "# 'Patient_Variants'\n",
+    "# 'Age_of_Diagnosis'\n",
+    "# 'Survival_Time'\n",
+    "# 'Gender'\n",
+    "# 'Drug_Name(s)'\n",
+    "# 'Biological_Object(s)'\n",
+    "# 'Process_Activity(s)'\n",
+    "# 'Process_Types(s)'\n",
+    "# 'PathM'\n",
+    "# 'PathN'\n",
+    "# 'PathT'\n",
+    "#print(sensitive_patients)\n"
    ]
   },
   {
