modified integration notebooks for ranking agent and unsecret agent to allow for curie matching

--- a/notebooks/integrations/RankingAgent/Ranking_Agent.ipynb
+++ b/notebooks/integrations/RankingAgent/Ranking_Agent.ipynb
@@ -13,17 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "import json"
+    "import json\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +39,8 @@
     "# A knowledge graph with decorated edges for \n",
     "# P(survival_time > 1000 | Mut_g1 = True OR Drug = d1)\n",
     "\n",
-    "def buildQuery(genes=None, drugs=None):\n",
-    "    assert genes != None or drugs != None, \"Must include at least 1 gene OR 1 drug.\"\n",
+    "def buildQuery(gene=None, drug=None):\n",
+    "    assert gene != None or drug != None, \"Must include at least 1 gene OR 1 drug.\"\n",
     "    \n",
     "    # empty response\n",
     "    reasoner_std = { \"query_graph\": dict(),\n",
@@ -62,16 +63,15 @@
     "                                \"edge_bindings\": []\n",
     "                              }\n",
     "\n",
-    "    if genes != None:\n",
+    "    if gene != None:\n",
     "        # add in evidence genes\n",
     "        reasoner_std['query_graph']['nodes'].append({ 'id':'n{}'.format('0'),\n",
     "                                                      'type':'Gene',\n",
     "                                                      'name':'{}'.format(gene[0]),\n",
     "                                                      'curie':'{}'.format(gene[1])\n",
     "                                                   })\n",
-    "    elif drugs != None:\n",
+    "    elif drug != None:\n",
     "        # add in evidence drug\n",
-    "        drug = ('CYCLOPHOSPHAMIDE', '<curie_placeholder>')\n",
     "        reasoner_std['query_graph']['nodes'].append({ 'id':'n{}'.format('0'),\n",
     "                                                      'type':'Drug',\n",
     "                                                      'name':'{}'.format(drug[0]),\n",
@@ -90,28 +90,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def readGenes():\n",
-    "    f = open('genes.txt', 'r')\n",
-    "    gene_list = f.read()\n",
-    "    gene_list = gene_list.split(',')\n",
-    "    return gene_list"
+    "    with open('gene_curie_map.csv', 'r') as gene_file:\n",
+    "        reader = csv.reader(gene_file)\n",
+    "        next(reader)\n",
+    "        rows = [row for row in reader]\n",
+    "    return rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def readDrugs():\n",
-    "    f = open('drugs.txt', 'r')\n",
-    "    drug_list = f.read()\n",
-    "    drug_list = drug_list.split(',')\n",
-    "    return drug_list"
+    "    with open('drug_curie_map.csv', 'r') as drug_file:\n",
+    "        reader = csv.reader(drug_file)\n",
+    "        next(reader)\n",
+    "        rows = [row for row in reader]\n",
+    "    return rows"
    ]
   },
   {
@@ -144,10 +146,10 @@
     "# list of genes we can query over\n",
     "#drug_list = readDrugs()\n",
     "\n",
-    "gene = ('RAF1', '<curie_placeholder>')\n",
-    "drug = ('CYCLOPHOSPHAMIDE', '<curie_placeholder>')\n",
+    "# or pull from above lists\n",
+    "gene = ('RAF1', 'ENSEMBL:ENSG00000132155')\n",
     "\n",
-    "query = buildQuery(gene)\n",
+    "query = buildQuery(gene=gene)\n",
     "query['reasoner_id'] = 'ranking'\n",
     "payload = {'query': query}\n",
     "\n",
