--- a/notebooks/integrations/UnsecretAgent/CHP_UA_Integration.ipynb
+++ b/notebooks/integrations/UnsecretAgent/CHP_UA_Integration.ipynb
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import json"
+    "import json\n",
+    "import csv"
    ]
   },
   {
@@ -138,10 +139,11 @@
    "outputs": [],
    "source": [
     "def readGenes():\n",
-    "    f = open('genes.txt', 'r')\n",
-    "    gene_list = f.read()\n",
-    "    gene_list = gene_list.split(',')\n",
-    "    return gene_list"
+    "    with open('gene_curie_map.csv', 'r') as gene_file:\n",
+    "        reader = csv.reader(gene_file)\n",
+    "        next(reader)\n",
+    "        rows = [row for row in reader]\n",
+    "    return rows"
    ]
   },
   {
@@ -164,7 +166,8 @@
     "#gene_list = readGenes()\n",
     "#print(gene_list)\n",
     "\n",
-    "genes = [('RAF1','[ENSEMBL:ENSG00000132155.12]'),('BRAF','[ENSEMBL:ENSG00000157764.13]')]\n",
+    "# or pull from available list above\n",
+    "genes = [('RAF1','ENSEMBL:ENSG00000132155'),('BRAF','ENSEMBL:ENSG00000157764')]\n",
     "\n",
     "response = buildQuery(genes)\n",
     "response['reasoner_id'] = 'unsecret'\n",
