added missing edge to ranking agent notebook QG

--- a/notebooks/integrations/RankingAgent/Ranking_Agent.ipynb
+++ b/notebooks/integrations/RankingAgent/Ranking_Agent.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,19 +78,26 @@
     "                                                      'curie':'{}'.format(drug[1])\n",
     "                                                   })\n",
     "\n",
-    "    # add target survival node\n",
+    "    # add target survival node - value is default popualted to 1000 days, but this can be changed\n",
     "    reasoner_std['query_graph']['nodes'].append({ 'id': 'n{}'.format('1'),\n",
     "                                                  'type': 'Death',\n",
     "                                                  'curie': 'UBERON:0000071',\n",
     "                                                  'operator': '>=',\n",
     "                                                  'value': '1000'\n",
     "                                               })\n",
+    "    \n",
+    "    reasoner_std['query_graph']['edges'].append({ 'id':'e{}'.format('0'),\n",
+    "                                                  'type':'causes',\n",
+    "                                                  'curie':['RO:0002410'],\n",
+    "                                                  'source_id':'n{}'.format('0'),\n",
+    "                                                  'target_id':'n{}'.format('1')\n",
+    "                                               })\n",
     "    return reasoner_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,25 +125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ZOLADEX', 'CYCLOPHOSPHAMIDE', 'DOXORUBICIN', 'HERCEPTIN', 'TRASTUZUMAB', 'CARBOPLATIN', 'DOCETAXEL', 'FLUOROURACIL', 'TAMOXIFEN', 'LETROZOLE', 'ADRIAMYCIN', 'CYTOXAN', 'TAXOL', 'ARIMIDEX', 'EXEMESTANE', 'GEMZAR', 'TAXOTERE', 'XELODA', 'ANASTROZOLE', 'ZOMETA', 'GEMCITABINE', 'PACLITAXEL', 'ABRAXANE', 'DENOSUMAB', 'FULVESTRANT', 'ZOLEDRONIC ACID', 'LUPRON', 'LAPATINIB', 'FEMARA', 'AROMASIN', 'GOSERELIN', 'BEVACIZUMAB', 'EPIRUBICIN', 'METHOTREXATE', 'VINORELBINE', 'PAMIDRONATE', 'AVASTIN', 'TRIPTORELIN', 'ADRIAMYCIN-CYCLOPHOSPHAMIDE', 'CLODRONATE', 'FASLODEX', 'CYCLOPHOSPHANE', 'NEULASTA']\n"
+      "Probability of survival > 1000 days is: 0.41079913606911445\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nr = requests.post(\\'http://chp.thayer.dartmouth.edu/submitQuery/\\', json=payload)\\nchp_res = json.loads(r.content)\\n\\nQG = chp_res[\\'query_graph\\']\\nKG = chp_res[\\'knowledge_graph\\']\\nres = chp_res[\\'results\\']\\n\\n# extract probability\\nKG_result_node = res[\\'node_bindings\\'][0][\\'kg_id\\']\\nfor node in KG[\\'nodes\\']:\\n    if node[\\'id\\'] == KG_result_node:\\n        p_survival = node[\\'has_confidence_level\\']\\n\\n# probability of surival given QG specification\\nprint(\"Probability of survival > 1000 days is:\", p_survival)\\n'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
