overhaul to the Ranking Agent integration. Reworked the ranking agent handler w.r.t Patrick's specifications. Inlcuded more unit testing and updated the notebook to reflect the rework to the handler.

--- a/notebooks/integrations/RankingAgent/Ranking_Agent.ipynb
+++ b/notebooks/integrations/RankingAgent/Ranking_Agent.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,27 +47,23 @@
     "                     \"knowledge_graph\": dict(),\n",
     "                     \"response\": dict()\n",
     "                   }\n",
-    "\n",
     "    # empty query graph\n",
     "    reasoner_std[\"query_graph\"] = { \"edges\": [],\n",
     "                                    \"nodes\": []\n",
     "                                  }\n",
-    "\n",
     "    # empty knowledge graph\n",
     "    reasoner_std[\"knowledge_graph\"] = { \"edges\": [],\n",
     "                                        \"nodes\": []\n",
     "                                      }\n",
-    "\n",
     "    # empty response graph\n",
     "    reasoner_std[\"results\"] = { \"node_bindings\": [],\n",
     "                                \"edge_bindings\": []\n",
     "                              }\n",
-    "\n",
+    "        \n",
     "    if gene != None:\n",
     "        # add in evidence genes\n",
     "        reasoner_std['query_graph']['nodes'].append({ 'id':'n{}'.format('0'),\n",
     "                                                      'type':'Gene',\n",
-    "                                                      'name':'{}'.format(gene[0]),\n",
     "                                                      'curie':'{}'.format(gene[1])\n",
     "                                                   })\n",
     "    elif drug != None:\n",
@@ -78,17 +74,14 @@
     "                                                      'curie':'{}'.format(drug[1])\n",
     "                                                   })\n",
     "\n",
-    "    # add target survival node - value is default popualted to 1000 days, but this can be changed\n",
+    "    # add target survival node\n",
     "    reasoner_std['query_graph']['nodes'].append({ 'id': 'n{}'.format('1'),\n",
-    "                                                  'type': 'Death',\n",
+    "                                                  'type': 'PhenotypicFeature',\n",
     "                                                  'curie': 'UBERON:0000071',\n",
-    "                                                  'operator': '>=',\n",
-    "                                                  'value': '1000'\n",
-    "                                               })\n",
-    "    \n",
+    "                                                })\n",
+    "    # link evidence to target survival node\n",
     "    reasoner_std['query_graph']['edges'].append({ 'id':'e{}'.format('0'),\n",
     "                                                  'type':'causes',\n",
-    "                                                  'curie':['RO:0002410'],\n",
     "                                                  'source_id':'n{}'.format('0'),\n",
     "                                                  'target_id':'n{}'.format('1')\n",
     "                                               })\n",
@@ -97,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,10 +151,10 @@
     "res = chp_res['results']\n",
     "\n",
     "# extract probability\n",
-    "KG_result_node = res['node_bindings'][0]['kg_id']\n",
-    "for node in KG['nodes']:\n",
-    "    if node['id'] == KG_result_node:\n",
-    "        p_survival = node['has_confidence_level']\n",
+    "KG_result_edge = res['edge_bindings'][0]['kg_id']\n",
+    "for edge in KG['edges']:\n",
+    "    if edge['id'] == KG_result_edge:\n",
+    "        p_survival = edge['has_confidence_level']\n",
     "\n",
     "# probability of surival given QG specification\n",
     "print(\"Probability of survival > 1000 days is:\", p_survival)"
