--- a/notebooks/integrations/RankingAgent/Ranking_Agent.ipynb
+++ b/notebooks/integrations/RankingAgent/Ranking_Agent.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,22 +43,12 @@
     "    assert gene != None or drug != None, \"Must include at least 1 gene OR 1 drug.\"\n",
     "    \n",
     "    # empty response\n",
-    "    reasoner_std = { \"query_graph\": dict(),\n",
-    "                     \"knowledge_graph\": dict(),\n",
-    "                     \"response\": dict()\n",
-    "                   }\n",
+    "    reasoner_std = { \"query_graph\": dict()}\n",
+    "    \n",
     "    # empty query graph\n",
     "    reasoner_std[\"query_graph\"] = { \"edges\": [],\n",
     "                                    \"nodes\": []\n",
     "                                  }\n",
-    "    # empty knowledge graph\n",
-    "    reasoner_std[\"knowledge_graph\"] = { \"edges\": [],\n",
-    "                                        \"nodes\": []\n",
-    "                                      }\n",
-    "    # empty response graph\n",
-    "    reasoner_std[\"results\"] = { \"node_bindings\": [],\n",
-    "                                \"edge_bindings\": []\n",
-    "                              }\n",
     "        \n",
     "    if gene != None:\n",
     "        # add in evidence genes\n",
@@ -90,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of survival > 1000 days is: 0.41079913606911445\n"
+      "Probability of survival > 1000 days is: 0.42857142857142855\n"
      ]
     }
    ],
