--- a/notebooks/curie_mapping.ipynb
+++ b/notebooks/curie_mapping.ipynb
@@ -1,4 +1,19 @@
 {
+"nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "assign_2_ENGS_108_Fall_2020.ipynb",
+      "provenance": [],
+      "mount_file_id": "1NzKgMP-He3hMaaYSDAEgwLJHpcHAQcqW",
+      "authorship_tag": "ABX9TyPKfpIhsCs8xLO7UACjh1yY",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  }
  "cells": [
   {
    "cell_type": "code",
