cleaned up notebook for appropriate survival time print statements and dictionary indexing

--- a/notebooks/integrations/ExploringAgent/Exploring_Agent.ipynb
+++ b/notebooks/integrations/ExploringAgent/Exploring_Agent.ipynb
@@ -7,13 +7,13 @@
     "# Example Query for Survival Probability of 1-hop Queries\n",
     "\n",
     "Queries our system in the form of:<br>\n",
-    "$P(survival\\_time > 1000 | Mut\\_g_1 = True, Mut\\_g_2 = True, ..., Mut\\_g_n = True, Drug = d_1, Drug = d_2, ..., Drug = d_n)$<br>\n",
+    "$P(survival\\_time > X | Mut\\_g_1 = True, Mut\\_g_2 = True, ..., Mut\\_g_n = True, Drug = d_1, Drug = d_2, ..., Drug = d_n)$<br>\n",
     "Returned is a knowledge graph containing probability of survival time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,9 @@
     "# Output:\n",
     "# -----------\n",
     "# A query graph that answers this probablistic question: \n",
-    "# P(survival_time > 1000 | Mut_g1 = True, Mut_g2 = True, ..., Mut_gn = True, Drug = d1, Drug = d2, ..., Drug = dn)\n",
+    "# P(survival_time > X | Mut_g1 = True, Mut_g2 = True, ..., Mut_gn = True, Drug = d1, Drug = d2, ..., Drug = dn)\n",
     "\n",
-    "def buildQuery(genes=[], drugs=[]):\n",
+    "def buildQuery(st, genes=[], drugs=[]):\n",
     "    \n",
     "    # empty response\n",
     "    reasoner_std = { \"query_graph\": dict()}\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of survival > 970 days is: 0.6043478260869565\n"
+      "Probability of survival > 1000 days is: 0.4\n"
      ]
     }
    ],
@@ -166,12 +166,12 @@
     "genes = [('RAF1', 'ENSEMBL:ENSG00000132155'),\n",
     "         ('BRCA1', 'ENSEMBL:ENSG00000012048')]\n",
     "drugs = [('CYCLOPHOSPHAMIDE', 'CHEMBL:CHEMBL88')]\n",
+    "survival_time = 1000\n",
     "\n",
     "# if genes or drugs is an empty list you can omit them\n",
-    "query = buildQuery(genes=genes, drugs=drugs)\n",
+    "query = buildQuery(survival_time, genes=genes, drugs=drugs)\n",
     "query['reasoner_id'] = 'exploring'\n",
     "payload = {'query': query}\n",
-    "\n",
     "r = requests.post('http://chp.thayer.dartmouth.edu/submitQuery/', json=payload)\n",
     "chp_res = json.loads(r.content)\n",
     "\n",
@@ -185,7 +185,7 @@
     "        p_survival = edge['has_confidence_level']\n",
     "\n",
     "# probability of surival given QG specification\n",
-    "print(\"Probability of survival > 970 days is:\", p_survival)"
+    "print(\"Probability of survival > {} days is:\".format(survival_time), p_survival)"
    ]
   },
   {
