--- a/notebooks/integrations/UnsecretAgent/Unsecret_Agent.ipynb
+++ b/notebooks/integrations/UnsecretAgent/Unsecret_Agent.ipynb
@@ -7,13 +7,13 @@
     "# Example Query for Survival Probability of 1-hop Queries\n",
     "\n",
     "Queries our system in the form of:<br>\n",
-    "$P(survival\\_time > 970 | Mut\\_g_1 = True, Mut\\_g_2 = True, ..., Mut\\_g_n = True, Drug = d_1, Drug = d_2, ..., Drug = d_n)$<br>\n",
+    "$P(survival\\_time > X | Mut\\_g_1 = True, Mut\\_g_2 = True, ..., Mut\\_g_n = True, Drug = d_1, Drug = d_2, ..., Drug = d_n)$<br>\n",
     "Returned is a knowledge graph containing probability of survival time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "# Output:\n",
     "# -----------\n",
     "# A query graph that answers this probablistic question: \n",
-    "# P(survival_time > 1000 | Mut_g1 = True, Mut_g2 = True, ..., Mut_gn = True, Drug = d1, Drug = d2, ..., Drug = dn)\n",
+    "# P(survival_time > X | Mut_g1 = True, Mut_g2 = True, ..., Mut_gn = True, Drug = d1, Drug = d2, ..., Drug = dn)\n",
     "# Drugs can be left empty, but Genes CANNOT\n",
     "\n",
     "def buildQuery(st, genes=[], drugs=[]):\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,13 +124,13 @@
     "    with open('gene_curie_map.csv', 'r') as gene_file:\n",
     "        reader = csv.reader(gene_file)\n",
     "        next(reader)\n",
-    "        rows = [row for row in reader]\n",
+    "        rows = [(row[0],row[1]) for row in reader]\n",
     "    return rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,13 +138,13 @@
     "    with open('drug_curie_map.csv', 'r') as drug_file:\n",
     "        reader = csv.reader(drug_file)\n",
     "        next(reader)\n",
-    "        rows = [row for row in reader]\n",
+    "        rows = [(row[0],row[1]) for row in reader]\n",
     "    return rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -153,22 +153,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of survival > 970 days is: 0.006155376747353221\n"
+      "Probability of survival > 1000 days is: 0.4224032687518742\n"
      ]
     }
    ],
    "source": [
     "# list of genes (and curies) we can query over\n",
-    "#gene_list = readGenes()\n",
+    "gene_list = readGenes()\n",
     "\n",
     "# list of drugs (and curies) we can query over\n",
-    "#drug_list = readDrugs()\n",
+    "drug_list = readDrugs()\n",
     "\n",
     "# or pull from above lists\n",
     "genes = [('RAF1', 'ENSEMBL:ENSG00000132155'),\n",
     "         ('MAP3K13','ENSEMBL:ENSG00000073803')]\n",
     "drugs = []\n",
-    "survival_time = 970\n",
+    "survival_time = 1000\n",
     "# if genes or drugs is an empty list you can omit them\n",
     "query = buildQuery(survival_time, genes=genes, drugs=drugs)\n",
     "query['reasoner_id'] = 'unsecret'\n",
@@ -188,7 +188,7 @@
     "        Contribution = edge['Description']\n",
     "\n",
     "# probability of surival given QG specification\n",
-    "print(\"Probability of survival > 970 days is:\", p_survival)"
+    "print(\"Probability of survival > {} days is:\".format(survival_time), p_survival)"
    ]
   },
   {
@@ -200,41 +200,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evidence supporting P(Survival_Time >= 970 | Evidence) == True:\n",
-      "\tAge_of_Diagnosis 21113.81249257478 - 29560.278692835553 : 2.581601925858197e-05\n",
-      "\tStage_T == T1 : 2.4880703020252804e-05\n",
-      "\tStage_N == N0 : 2.3945386781923637e-05\n",
-      "\tStage_M == M0 : 2.301007054359447e-05\n",
-      "\tDrug_Name(s) == CYTOXAN = True : 2.2074754305265302e-05\n",
-      "\tDrug_Name(s) == TAMOXIFEN = True : 2.1139438066936135e-05\n",
-      "\tDrug_Name(s) == DOXORUBICIN = True : 2.020412182860697e-05\n",
-      "\tmut_RAF1 = True : 1.5527540636961135e-05\n",
-      "\tmut_MAP3K13 = True : 1.4692712857683897e-05\n",
-      "\tmut_PIK3CA = True : 1.7701440176064054e-06\n",
-      "\tmut_MAP3K13 = False : 1.7701440176064054e-06\n",
-      "\tmut_TTN = True : 9.353162383291668e-07\n",
-      "\tmut_RAF1 = False : 9.353162383291668e-07\n",
-      "Evidence supporting P(Survival_Time >= 970 | Evidence) == False:\n",
-      "\tAge_of_Diagnosis 17217.23703040372 - 26168.902787225456 : 3.212108479294976e-05\n",
-      "\tStage_T == T4 : 3.1111482330903835e-05\n",
-      "\tStage_N == N3 : 3.0101879868857913e-05\n",
-      "\tStage_M == M1 : 2.909227740681199e-05\n",
-      "\tDrug_Name(s) == CYCLOPHOSPHAMIDE = True : 2.8082674944766065e-05\n",
-      "\tDrug_Name(s) == TAMOXIFEN = True : 2.7073072482720143e-05\n",
-      "\tDrug_Name(s) == CYTOXAN = True : 2.606347002067422e-05\n",
-      "\tmut_RAF1 = True : 2.1015457710444607e-05\n",
-      "\tmut_MAP3K13 = True : 1.9364953126219053e-05\n",
-      "\tmut_PIK3CA = True : 2.6601070462714767e-06\n",
-      "\tmut_MAP3K13 = False : 2.6601070462714767e-06\n",
-      "\tmut_TTN = True : 1.009602462045923e-06\n",
-      "\tmut_RAF1 = False : 1.009602462045923e-06\n"
+      "Evidence supporting P(Survival_Time >= 1000 | Evidence) == True:\n",
+      "\tAge_of_Diagnosis 16134.063037672804 - 24576.605732043285 : 2.5073974300727853e-05\n",
+      "\tStage_T == T1 : 2.419504802341699e-05\n",
+      "\tStage_N == N0 : 2.331612174610613e-05\n",
+      "\tStage_M == M0 : 2.243719546879527e-05\n",
+      "\tDrug_Name(s) == CYTOXAN = True : 2.1558269191484407e-05\n",
+      "\tDrug_Name(s) == DOXORUBICIN = True : 2.0679342914173544e-05\n",
+      "\tDrug_Name(s) == TAMOXIFEN = True : 1.9800416636862682e-05\n",
+      "\tmut_RAF1 = True : 1.5405785250308376e-05\n",
+      "\tmut_MAP3K13 = True : 1.4648585598728777e-05\n",
+      "\tmut_PIK3CA = True : 1.6361259288904592e-06\n",
+      "\tmut_MAP3K13 = False : 1.6361259288904592e-06\n",
+      "\tmut_TTN = True : 8.789262773108619e-07\n",
+      "\tmut_RAF1 = False : 8.789262773108619e-07\n",
+      "Evidence supporting P(Survival_Time >= 1000 | Evidence) == False:\n",
+      "\tAge_of_Diagnosis 17147.550755762844 - 26109.14719145123 : 3.299125882541051e-05\n",
+      "\tStage_T == T4 : 3.191891404128864e-05\n",
+      "\tStage_N == N3 : 3.0846569257166784e-05\n",
+      "\tStage_M == M1 : 2.9774224473044925e-05\n",
+      "\tDrug_Name(s) == CYCLOPHOSPHAMIDE = True : 2.8701879688923063e-05\n",
+      "\tDrug_Name(s) == TAMOXIFEN = True : 2.76295349048012e-05\n",
+      "\tDrug_Name(s) == CYTOXAN = True : 2.6557190120679342e-05\n",
+      "\tmut_RAF1 = True : 2.1195466200070034e-05\n",
+      "\tmut_MAP3K13 = True : 1.9412110400054068e-05\n",
+      "\tmut_PIK3CA = True : 2.855700584137825e-06\n",
+      "\tmut_MAP3K13 = False : 2.855700584137825e-06\n",
+      "\tmut_TTN = True : 1.072344784121861e-06\n",
+      "\tmut_RAF1 = False : 1.072344784121861e-06\n"
      ]
     }
    ],
@@ -242,14 +242,15 @@
     "contribution_analysis = Contribution['Contribution Analysis']\n",
     "\n",
     "# First we access the features that highly contributed to our probability for the Truth assignment\n",
-    "print(\"Evidence supporting P(Survival_Time >= 970 | Evidence) == True:\")\n",
-    "for k,v in contribution_analysis['Survival_Time >= 970 = True'].items():\n",
+    "print(\"Evidence supporting P(Survival_Time >= {} | Evidence) == True:\".format(survival_time))\n",
+    "for k,v in contribution_analysis['Survival_Time >= {} = True'.format(survival_time)].items():\n",
     "    print('\\t{} : {}'.format(k,v))\n",
     "    \n",
     "# Next we access the features that highly contributed to our probability for the False assignment\n",
-    "print(\"Evidence supporting P(Survival_Time >= 970 | Evidence) == False:\")\n",
-    "for k,v in contribution_analysis['Survival_Time >= 970 = False'].items():\n",
-    "    print('\\t{} : {}'.format(k,v))"
+    "print(\"Evidence supporting P(Survival_Time >= {} | Evidence) == False:\".format(survival_time))\n",
+    "for k,v in contribution_analysis['Survival_Time >= {} = False'.format(survival_time)].items():\n",
+    "    print('\\t{} : {}'.format(k,v))\n",
+    "    "
    ]
   },
   {
