update for notebooks and addition of Default Handler

--- a/notebooks/integrations/ExploringAgent/Exploring_Agent.ipynb
+++ b/notebooks/integrations/ExploringAgent/Exploring_Agent.ipynb
@@ -172,7 +172,7 @@
     "query = buildQuery(survival_time, genes=genes, drugs=drugs)\n",
     "query['reasoner_id'] = 'exploring'\n",
     "payload = {'query': query}\n",
-    "r = requests.post('http://chp.thayer.dartmouth.edu/submitQuery/', json=payload)\n",
+    "r = requests.post('http://chp.thayer.dartmouth.edu/query/', json=payload)\n",
     "chp_res = json.loads(r.content)\n",
     "\n",
     "QG = chp_res['query_graph']\n",
