--- a/notebooks/integrations/UnsecretAgent/Unsecret_Agent.ipynb
+++ b/notebooks/integrations/UnsecretAgent/Unsecret_Agent.ipynb
@@ -174,7 +174,7 @@
     "query['reasoner_id'] = 'unsecret'\n",
     "payload = {'query': query}\n",
     "\n",
-    "r = requests.post('http://chp.thayer.dartmouth.edu/submitQuery/', json=payload)\n",
+    "r = requests.post('http://chp.thayer.dartmouth.edu/query/', json=payload)\n",
     "chp_res = json.loads(r.content)\n",
     "\n",
     "QG = chp_res['query_graph']\n",
