Update for TRAPI notebook and cleaned up rest of notebooks

--- a/notebooks/integrations/ExploringAgent/Exploring_Agent.ipynb
+++ b/notebooks/integrations/ExploringAgent/Exploring_Agent.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of survival > 1000 days is: 0.4\n"
+      "Probability of survival > 1000 days is: 0.41724943497249034\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
     "# if genes or drugs is an empty list you can omit them\n",
     "query = buildQuery(survival_time, genes=genes, drugs=drugs)\n",
     "query['reasoner_id'] = 'exploring'\n",
-    "payload = {'query': query}\n",
+    "payload = {'message': query}\n",
     "r = requests.post('http://chp.thayer.dartmouth.edu/query/', json=payload)\n",
     "chp_res = json.loads(r.content)\n",
     "\n",
