--- a/notebooks/integrations/UnsecretAgent/Unsecret_Agent.ipynb
+++ b/notebooks/integrations/UnsecretAgent/Unsecret_Agent.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -153,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of survival > 1000 days is: 0.4224032687518742\n"
+      "Probability of survival > 1000 days is: 0.4224032687518743\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
     "# if genes or drugs is an empty list you can omit them\n",
     "query = buildQuery(survival_time, genes=genes, drugs=drugs)\n",
     "query['reasoner_id'] = 'unsecret'\n",
-    "payload = {'query': query}\n",
+    "payload = {'message': query}\n",
     "\n",
     "r = requests.post('http://chp.thayer.dartmouth.edu/query/', json=payload)\n",
     "chp_res = json.loads(r.content)\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,13 +208,13 @@
      "output_type": "stream",
      "text": [
       "Evidence supporting P(Survival_Time >= 1000 | Evidence) == True:\n",
-      "\tAge_of_Diagnosis 16134.063037672804 - 24576.605732043285 : 2.5073974300727853e-05\n",
-      "\tStage_T == T1 : 2.419504802341699e-05\n",
-      "\tStage_N == N0 : 2.331612174610613e-05\n",
-      "\tStage_M == M0 : 2.243719546879527e-05\n",
-      "\tDrug_Name(s) == CYTOXAN = True : 2.1558269191484407e-05\n",
-      "\tDrug_Name(s) == DOXORUBICIN = True : 2.0679342914173544e-05\n",
-      "\tDrug_Name(s) == TAMOXIFEN = True : 1.9800416636862682e-05\n",
+      "\tAge_of_Diagnosis 16134.063037672804 - 24576.605732043285 : 2.507397430072786e-05\n",
+      "\tStage_T == T1 : 2.4195048023416998e-05\n",
+      "\tStage_N == N0 : 2.3316121746106135e-05\n",
+      "\tStage_M == M0 : 2.2437195468795273e-05\n",
+      "\tDrug_Name(s) == CYTOXAN = True : 2.155826919148441e-05\n",
+      "\tDrug_Name(s) == DOXORUBICIN = True : 2.0679342914173548e-05\n",
+      "\tDrug_Name(s) == TAMOXIFEN = True : 1.9800416636862685e-05\n",
       "\tmut_RAF1 = True : 1.5405785250308376e-05\n",
       "\tmut_MAP3K13 = True : 1.4648585598728777e-05\n",
       "\tmut_PIK3CA = True : 1.6361259288904592e-06\n",
@@ -222,13 +222,13 @@
       "\tmut_TTN = True : 8.789262773108619e-07\n",
       "\tmut_RAF1 = False : 8.789262773108619e-07\n",
       "Evidence supporting P(Survival_Time >= 1000 | Evidence) == False:\n",
-      "\tAge_of_Diagnosis 17147.550755762844 - 26109.14719145123 : 3.299125882541051e-05\n",
+      "\tAge_of_Diagnosis 17147.550755762844 - 26109.14719145123 : 3.29912588254105e-05\n",
       "\tStage_T == T4 : 3.191891404128864e-05\n",
-      "\tStage_N == N3 : 3.0846569257166784e-05\n",
-      "\tStage_M == M1 : 2.9774224473044925e-05\n",
-      "\tDrug_Name(s) == CYCLOPHOSPHAMIDE = True : 2.8701879688923063e-05\n",
-      "\tDrug_Name(s) == TAMOXIFEN = True : 2.76295349048012e-05\n",
-      "\tDrug_Name(s) == CYTOXAN = True : 2.6557190120679342e-05\n",
+      "\tStage_N == N3 : 3.084656925716678e-05\n",
+      "\tStage_M == M1 : 2.977422447304492e-05\n",
+      "\tDrug_Name(s) == CYCLOPHOSPHAMIDE = True : 2.870187968892306e-05\n",
+      "\tDrug_Name(s) == TAMOXIFEN = True : 2.7629534904801197e-05\n",
+      "\tDrug_Name(s) == CYTOXAN = True : 2.6557190120679335e-05\n",
       "\tmut_RAF1 = True : 2.1195466200070034e-05\n",
       "\tmut_MAP3K13 = True : 1.9412110400054068e-05\n",
       "\tmut_PIK3CA = True : 2.855700584137825e-06\n",
